# OurServer

./: AStar.cpp  AStar.h  AStar_results.txt  BFS.cpp  BFS.h  BFS_results.txt  BestFS.cpp  BestFS.h  BestFS_results.txt  CMakeLists.txt  CacheManager.h  Cell.cpp  Cell.h  ClientHandler.h  DFS.cpp  DFS.h  DFS_results.txt  FileCacheManager.cpp  FileCacheManager.h  Main.h  Matrix.cpp  Matrix.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  ObjectAdapter.cpp  ObjectAdapter.h  README.md  Searchable.h  Searcher.h  Server.h  Solver.cpp  Solver.h  State.cpp  State.h  (+11 more)
